??? 1.0.2
   - security enhancements: session timeout, logging, host restrictions
   - fixed bugs:
    -> PDF creation bug when GID translation is activated (1477111)


12.04.2006 1.0.1
   - LAM can now be installed with "configure" and "make install"
   - added workaround for misspelled object classes (e.g. sambaSAMAccount by smbldap-tools)
   - Unix: merged password hash settings for Unix users and groups
   - Samba 3: added Windows group to profile options
   - security: LAM checks the session id and client IP
   - fixed bugs:
    -> Samba 3: hash values were wrong in some rare cases (1440021)
    -> Samba 3: readded time zone selection for logon hours (1407761)
    -> Unix: call of unknown function (1450464)


01.03.2006 1.0.0
   - new architecture with support for more account types
   - new translations: Traditional Chinese, Dutch
   - fixed bugs:
    -> Samba groups: editing of special groups fixed
    -> changed check for mail addresses (patch 1403922)
    -> fixed JPG upload when MCrypt is enabled
    -> fixed login problems for AD servers
    -> improved sorting of account lists
    -> fixed language setting in default configuration profile
    -> fixed PHP5 warnings (getdate() and mktime())
    -> error messages in Samba domain module (1437425)
    -> fixed expired passwords with shadowAccount module
    -> added lamdaemon.pl compatibility and security patches by Tim Rice


08.02.2006 1.0.rc2
   - new translation: Dutch
   - fixed bugs:
    -> changed check for mail addresses (patch 1403922)
    -> fixed JPG upload when MCrypt is enabled
    -> fixed login problems for AD servers


09.01.2006 1.0.rc1
   - new architecture with support for more account types
   - new translation: Traditional Chinese
   - fixed bugs:
    -> Samba groups: editing of special groups fixed


14.12.2005 0.5.3
   - accounts are now deleted with subentries
   - big update for Italian translation
   - inetOrgPerson: support jpegPhoto images
   - less restrictive input checks