@@ -51,6 +51,8 @@ existing modules.<br>
 <br>
 <h3><a href="mod_rdn.htm">4. Defining the RDN</a></h3>
 <br>
+<h3><a href="mod_ext.htm">5. Defining required PHP extensions</a></h3>
+<br>
 <br>
 </div>
 </div>
